--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,12 @@
         android:text="Play"
         android:textColor="#FFFF" />
 
+    <TextView
+        android:text="won: 0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/won_textView" />
+
 </RelativeLayout>
